--- a/css/main.css
+++ b/css/main.css
@@ -34,12 +34,28 @@ nav li {
 li a {
   color: #3783a3;
   font-size: 1.5rem;
+  margin-top: 0;
 }
 
 main {
   display: grid;
-  grid-template-areas:
-  "banner banner banner"
-  "viewing gravel symbolism"
+}
 
+aside p {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 2rem;
+}
+
+header h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 2rem;
+}
+
+header h2 {
+  margin: 0;
+  padding: 0;
+  font-size: 1.125rem;
 }
