--- a/css/main.css
+++ b/css/main.css
@@ -59,3 +59,14 @@ header h2 {
   padding: 0;
   font-size: 1.125rem;
 }
+
+main h2 {
+  margin: 0;
+  padding: 0;
+}
+
+main h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 1.125rem;
+}
