--- a/css/main.css
+++ b/css/main.css
@@ -70,3 +70,11 @@ main h3 {
   padding: 0;
   font-size: 1.125rem;
 }
+
+section {
+  display: grid;
+  grid-template-columns: 3,1fr;
+  grid-template-areas:
+  "banner banner banner"
+  "viewing gravel symbolism"
+}
