--- a/css/main.css
+++ b/css/main.css
@@ -26,10 +26,10 @@ img {
   width: 100%;
 }
 
-nav li {
+nav ul {
   display: flex;
   justify-content: flex-end;
-}
+  list-style-type: none;
 
 li a {
   color: #3783a3;
@@ -37,44 +37,11 @@ li a {
   margin-top: 0;
 }
 
-main {
-  display: grid;
-}
-
-aside p {
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  font-size: 2rem;
-}
-
-header h1 {
-  margin: 0;
-  padding: 0;
-  font-size: 2rem;
-}
-
-header h2 {
-  margin: 0;
-  padding: 0;
-  font-size: 1.125rem;
-}
-
-main h2 {
-  margin: 0;
-  padding: 0;
-}
-
-main h3 {
-  margin: 0;
-  padding: 0;
-  font-size: 1.125rem;
-}
-
 section {
   display: grid;
   grid-template-columns: 3,1fr;
   grid-template-areas:
   "banner banner banner"
-  "viewing gravel symbolism"
+  "viewing gravel symbolism";
+  grid-column-gap: 1rem;
 }
